--- a/build.gradle
+++ b/build.gradle
@@ -220,8 +220,9 @@ configurations.all {
     }
 }
 
-checkstyle {
-    sourceSets = []
+tasks.withType(Checkstyle) {
+    ignoreFailures true
+    exclude '**/**'
 }
 
 test {
